<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="de.hs_kl.libris.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_navigation_library_to_book_detail"
            app:destination="@id/book_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="de.hs_kl.libris.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_book_detail"
            app:destination="@id/book_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/book_detail_fragment"
        android:name="de.hs_kl.libris.ui.library.BookDetailFragment"
        android:label="Book Details"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="bookId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="isNew"
            android:defaultValue="false"
            app:argType="boolean" />
        <argument
            android:name="searchResult"
            android:defaultValue="@null"
            app:argType="de.hs_kl.libris.ui.search.SearchResultUiModel"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.hs_kl.libris.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>